:memo: :: .toList() -> .collect(Collectors.toList())